tests/expected/err-doubledecl1.uc.out
/home/krikava/Teaching/FIT/NI-APR/2022/microc/tests/../examples/err-doubledecl1.uc:[3:7]: error: identifier 'q' already declared (2:11)
    var q; // error: identifier already declared
        ^

1
